# havsim

./: .gitignore  MANIFEST.in  README.readme  Welcome_To_Colaboratory.ipynb  setup.py
data/: loaddata.py  loadngsim.py
havsim/: __init__.py  api.py  helper.py  plotting.py
havsim documentation/: havsim guide (work in progress).html  havsim guide (work in progress).ipynb
havsim simulation documentation/: havsim.simulation.models.html  havsim.simulation.simulation.html  havsimdocumentation.html  havsimdocumentation.ipynb
havsim/calibration/: __init__.py  algs.py  calibration.py  calibration_models.py  deep_learning.py  helper.py  opt.py  platoon_formation.py
havsim/old/: __init__.py  algs.py  calibration.py  models.py  opt.py
havsim/simulation/: __init__.py  analysis.py  calibration.py  calibration_models.py  circular_route.py  models.py  modelsold.py  relaxation.py  road_networks.py  simulation.py  simulationold.py  simulationold2.py  update_lane_routes.py  vehicle_orders.py  vehicles.py
havsim/simulation/simulation-cpp/: CMakeLists.txt  lane.cpp  lane.h  model.cpp  test.cpp  test1_input  test1_output  test2_output  test3_input  test3_output  test4_output  vehicle.cpp  vehicle.h
havsim/simulation_cpp/: CMakeLists.txt  lane.cpp  model.h  test2_input  test_infinite_road.cpp  test_results.txt  test_set_lc.cpp  test_set_lc.py
scripts/: test_helper.py
scripts/2018 AY papers/: adjointacc.py  adjointcontent.py  adjointspeed.py  calculate adjoint system.nb  note on this folder.txt  postercontent.py  relaxcontent.py  testadjointbugfix.py
scripts/other/: debug.py  (+4 more)
(+249 files in other folders)
